<resources>
    <string name="app_name">Prise de commande</string>
    <string name="home_title">Utilisateur</string>
    <string name="client">Client</string>
    <string name="ajouter">Ajouter</string>
    <string name="valider">Valider</string>
    <string name="retour">Retour</string>
    <string name="search_hint">Rechercher</string>
    <string name="panier">Panier</string>
    <string name="ean_title">Code-barre</string>
    <string name="quantity_title">Quantité</string>
    <string name="packaging_title">Conditionnement</string>
    <string name="add_to_basket">Ajouter au panier</string>
    <string name="consignes">Consignes</string>
    <string name="livraison_title">Date de livraison</string>
    <string name="plv_title">PLV</string>
    <string name="commentaire_title">Commentaire</string>
    <string name="recapitulatif">Récapitulatif</string>
    <string name="annuler">Annuler</string>
    <string name="envoyer">Envoyer</string>
    <string name="quantity_title_uvc">Quantité (UVC)</string>
    <string name="numerolot_title">Numero de lot</string>
    <string name="ddm_title">DDM</string>
    <string name="pvc_title">PVC</string>
    <string name="retour_title">Date de retour</string>
    <string name="numero_lot">Saisir le numéro de lot</string>
    <string name="saisir_la_ddm">JJ/MM/AA</string>
    <string name="ean">Saisir le code-barre</string>
    <string name="quantite">Saisir la quantité</string>
    <string name="pvc">Saisir le Prix de Vente Constaté</string>
    <string name="crivez_votre_commentaire_ici">Écrivez votre commentaire ici</string>
    <string name="saisir_le_support_de_plv">Saisir le support de PLV</string>
    <string name="s_lectionner_le_conditionnement">Sélectionner le conditionnement</string>
</resources>