<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_corners">

        <TextView
            android:id="@+id/page_title"
            style="@style/Theme.VA_PriseCommande.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/search_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/page_title"
            app:layout_constraintBottom_toTopOf="@id/vertical_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="20sp"
            app:startIconDrawable="@drawable/resized_search_icon"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vertical_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/button_container"
            app:layout_constraintTop_toBottomOf="@id/search_input" />

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/rounded_top_corners"
            android:elevation="10dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/left_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/retour"
                android:textSize="@dimen/general_text_size"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp"/>

            <Button
                android:id="@+id/right_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/valider"
                android:textSize="@dimen/general_text_size" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>