<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="sharedViewModel"
            type="com.example.va_prisecommande.viewmodel.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_corners">

        <TextView
            android:id="@+id/page_title"
            style="@style/Theme.VA_PriseCommande.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consignes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/page_title">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_card_margin"
                    android:layout_marginTop="@dimen/default_card_margin"
                    android:layout_marginBottom="@dimen/default_card_margin"
                    android:layout_marginEnd="@dimen/default_card_margin"
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:contentPadding="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/livraison_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/livraison_title"
                            app:layout_constraintStart_toStartOf="@id/container"
                            app:layout_constraintTop_toTopOf="@id/container" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/livraison_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:endIconMode="clear_text"
                            android:hint="@string/saisir_la_ddm"
                            app:endIconTint="@color/primary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/livraison_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/livraison_edit_text"
                                android:text="@{sharedViewModel.dateLivraisonSaisie}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789/"
                                android:inputType="number"
                                android:maxLength="13"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/plv_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/plv_title"
                            app:layout_constraintStart_toStartOf="@id/livraison_input"
                            app:layout_constraintTop_toBottomOf="@id/livraison_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/plv_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/saisir_le_support_de_plv"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/plv_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{sharedViewModel.plvSaisi}"
                                android:inputType="text"
                                android:maxLength="50" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/retour_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/retour_title"
                            app:layout_constraintStart_toStartOf="@id/container"
                            app:layout_constraintTop_toBottomOf="@id/plv_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/retour_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:endIconMode="clear_text"
                            app:endIconTint="@color/primary"
                            android:hint="@string/saisir_la_ddm"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/retour_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/retour_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{sharedViewModel.dateRetourSaisie}"
                                android:digits="0123456789/"
                                android:inputType="number"
                                android:maxLength="13"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/commentaire_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/commentaire_title"
                            app:layout_constraintStart_toStartOf="@id/container"
                            app:layout_constraintTop_toBottomOf="@id/retour_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/commentaire_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/crivez_votre_commentaire_ici"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/commentaire_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{sharedViewModel.commentaireSaisi}"
                                android:inputType="textMultiLine"
                                android:maxLength="250" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/rounded_top_corners"
            android:elevation="10dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/left_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/retour"
                android:textSize="@dimen/general_text_size"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/valider"
                android:textSize="@dimen/general_text_size" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>