<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top_corners">

        <TextView
            android:id="@+id/page_title"
            style="@style/Theme.VA_PriseCommande.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/page_title"
            app:layout_constraintBottom_toTopOf="@id/button_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_card_margin"
                    android:layout_marginTop="@dimen/default_card_margin"
                    android:layout_marginEnd="@dimen/default_card_margin"
                    android:orientation="vertical"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:contentPadding="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/ean_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/ean_title"
                            app:layout_constraintStart_toStartOf="@id/container"
                            app:layout_constraintTop_toTopOf="@id/container" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ean_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:endIconMode="clear_text"
                            app:endIconTint="@color/primary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ean_title"
                            app:prefixText="333304000">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="4" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/quantity_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/quantity_title"
                            app:layout_constraintStart_toStartOf="@id/ean_input"
                            app:layout_constraintTop_toBottomOf="@id/ean_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/quantity_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/quantity_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="3" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/packaging_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/packaging_title"
                            app:layout_constraintStart_toStartOf="@id/packaging_input"
                            app:layout_constraintTop_toBottomOf="@id/quantity_input" />

                        <Spinner
                            android:id="@+id/packaging_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/packaging_title"/>

                        <TextView
                            android:id="@+id/quantity_uvc_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/quantity_title_uvc"
                            app:layout_constraintStart_toStartOf="@id/ean_input"
                            app:layout_constraintTop_toBottomOf="@id/packaging_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/quantity_uvc_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/quantity_uvc_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="3" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/numerolot_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/numerolot_title"
                            app:layout_constraintStart_toStartOf="@id/numerolot_input"
                            app:layout_constraintTop_toBottomOf="@id/quantity_uvc_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/numerolot_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/numerolot_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="5" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/ddm_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/ddm_title"
                            app:layout_constraintStart_toStartOf="@id/ddm_input"
                            app:layout_constraintTop_toBottomOf="@id/numerolot_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ddm_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ddm_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="8" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/pvc_title"
                            style="@style/title_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:gravity="center_vertical"
                            android:text="@string/pvc_title"
                            app:layout_constraintStart_toStartOf="@id/ddm_input"
                            app:layout_constraintTop_toBottomOf="@id/ddm_input" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/pvc_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/pvc_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:maxLength="4" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:id="@+id/add_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_card_margin_top_and_bottom"
                            android:text="@string/add_to_basket"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/pvc_input" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/vertical_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/default_card_margin"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/card_view"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/rounded_top_corners"
            android:elevation="10dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/left_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/retour"
                android:textSize="@dimen/general_text_size"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/valider"
                android:textSize="@dimen/general_text_size" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>